add swagger read and update
